--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,7 @@
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   } 
+  /*When hovering over a button create a shadow */
+  #button2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
