--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     left: 0;
     background-color: #111; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 120px;
+    margin-top: 110px;
   }
   
   /* The navigation menu links */
@@ -28,6 +28,7 @@
   /* Style page content */
   .main {
     margin-left: 167px; /* Same as the width of the sidebar */
+    margin-top: 30px;
     padding: 0px;
   }
   
