--- a/styles.css
+++ b/styles.css
@@ -142,4 +142,14 @@
       white-space: nowrap;
       -webkit-overflow-scrolling: touch;
     }
- 
+    a {
+      padding: 6px 8px 6px 16px;
+      text-decoration: none;
+      font-size: 20px;
+      color: white;
+      display: block;
+    }
+    a:hover {
+      color: grey;
+    }
+   
