--- a/styles.css
+++ b/styles.css
@@ -145,11 +145,17 @@
     a {
       padding: 6px 8px 6px 16px;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 15px;
       color: white;
       display: block;
     }
     a:hover {
       color: grey;
+    }
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      
     }
    
